# lancet-tool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
agent-manager/: Makefile  README.md  lancet.py  requirements.txt  setup.py
agent-manager/manager/: __init__.py  __main__.py  agentcontroller.py  lancet.py  proto.py  stats.py
agents/: CMakeLists.txt  agent.c  app_proto.c  args.c  cpp_rand.cc  http_app.cc  key_gen.c  loader.c  manager.c  memcache.c  picohttpparser.c  rand_gen.c  redis.c  stats.c  timestamping.c  tp_r2p2.c  tp_ssl.c  tp_tcp.c  tp_udp.c
coordinator/: Makefile  config.go  coordinator.go  deploy.go  main.go  proto.go  stats.go
inc/lancet/: agent.h  app_proto.h  coord_proto.h  cpp_rand.h  error.h  key_gen.h  manager.h  memcache_bin.h  misc.h  rand_gen.h  stats.h  timestamping.h  tp_proto.h
scripts/: clean_up.sh  deploy_lancet.sh  prepare_clients.sh
